--- a/模板/前缀和/前缀和数组.md
+++ b/模板/前缀和/前缀和数组.md
@@ -4,10 +4,10 @@
 
 ## 问题
 
-![[Pasted image 20221116151015.png]]
+![](Pasted%20image%2020221116154037.png)
 
 
 
 
-![[Pasted image 20221116151015.png]]
+
 
