--- a/模板/前缀和/前缀和数组.md
+++ b/模板/前缀和/前缀和数组.md
@@ -4,7 +4,24 @@
 
 ## 问题
 
-![](Pasted%20image%2020221116155610.png)
+对矩阵中的一些子数组求和
+子数组的定义，matrix[][] [] 
+-   该子矩阵的左上角为 `(row1, col1)` ，右下角为 `(row2, col2)` 。
+-  原来矩阵
+前缀数组的定义：preSum 【i】【j】 从原点开始计算，左上角为(0,0) 右下角为(i,j)
+
+将需要求和的子数组进行拆解
+
+![](Pasted%20image%2020221116160326.png)
+
+计算的矩阵 都从**(0,0)**开始进行。
+
+我们可以维护一个二维 `preSum` 数组，专门记录以原点为顶点的矩阵的元素之和，就可以用几次加减运算算出任何一个子矩阵的元素和：
+- 第一步得到`preSum[i][j] // 记录子矩阵matrix  (0,0) (i-1,j-1)的元素和 | (x1,y1) 到（x2，y2）的元素和` 
+`preSum[x2][y2]=matrix[x2-1][y2-1]+preSum[x1-1][y2]+preSum[x2][y1-1]-preSum[x1-1][y2-1]`
+
+- 第二步得到`matix[i][j]` 
+`matrix[x2][y2]=preSum[x2+1][y2+1]-preSum[x1][y2+1]-preSum[x2][y1]+preSum[x1][y2]`
 
 
 
