--- a/模板/数组/子序列/子序列.md
+++ b/模板/数组/子序列/子序列.md
@@ -18,7 +18,7 @@
 
 时间复杂度是：`O(s.lenght()+t.length())`
 
-`public boolean isSub(String s, String t) {  
+public boolean isSub(String s, String t) {  
     int k = 0;  
     for (int i = 0; i < t.length() && k < s.length(); i++) {  
         if (s.charAt(k) == t.charAt(i)) {  
@@ -26,7 +26,19 @@
         }  
     }  
     return k == s.length();  
-}`
+}
+	```
+	public boolea isSub(){
+	 int k = 0;  
+    for (int i = 0; i < t.length() && k < s.length(); i++) {  
+        if (s.charAt(k) == t.charAt(i)) {  
+            k++;  
+        }  
+    }  
+    return k == s.length();  
+	
+	}
+```
 
 2、预处理+hash+二分
 
