--- a/模板/数组/子序列/子序列.md
+++ b/模板/数组/子序列/子序列.md
@@ -18,27 +18,18 @@
 
 时间复杂度是：`O(s.lenght()+t.length())`
 
-public boolean isSub(String s, String t) {  
-    int k = 0;  
-    for (int i = 0; i < t.length() && k < s.length(); i++) {  
-        if (s.charAt(k) == t.charAt(i)) {  
-            k++;  
-        }  
-    }  
-    return k == s.length();  
-}
-	```
-	public boolea isSub(){
-	 int k = 0;  
-    for (int i = 0; i < t.length() && k < s.length(); i++) {  
-        if (s.charAt(k) == t.charAt(i)) {  
-            k++;  
-        }  
-    }  
-    return k == s.length();  
-	
-	}
 ```
+public boolean isSub(String s, String t) {  
+	    int k = 0;  
+	    for (int i = 0; i < t.length() && k < s.length(); i++) {  
+		        if (s.charAt(k) == t.charAt(i)) {  
+	            k++;  
+	        }  
+	    }  
+	    return k == s.length();  
+	} 
+```
+
 
 2、预处理+hash+二分
 
@@ -50,6 +41,49 @@ public boolean isSub(String s, String t) {
 
 我们考虑如何优化这部分无效匹配。
 
-首先针对需要进行匹配的数字来说，当知道`w[i]`  被匹配的时候
+首先针对需要进行匹配的数字来说，当知道`w[i]`  被匹配的时候 下一个被匹配的是`w[i+1]` ,因此我们可以直接在s的`w[i+1]` 位置上直接找到候选值。利用map来处理s，记录每个字符的下标，list存储，从小到大进行存储。
+1）每次遍历s字符，进行匹配 ，针对index下标的字母，需要记录在t上哪个下标（j）（最小的下标）是匹配的。
+2）当匹配`s[index+1]` 的时候，需要在t的 hash中找到满足改字母的所有下标list,从这个list进行二分查找，找到第一个大于j下标的值，进行返回。
+
+```
+public int numMatchingSubseq1(String s, String[] words) {  
+    int ans = 0;  
+    HashMap<Character, List<Integer>> map = new HashMap<>();  
+    for (int i = 0; i < s.length(); i++) {  
+        char c = s.charAt(i);  
+        List<Integer> list = map.getOrDefault(c, new ArrayList<>());  
+        list.add(i);  
+        map.put(c, list);  
+    }  
+  
+    for (String word : words) {  
+        // 得到遍历的数字  
+        boolean ok = true;  
+        int m = word.length();  
+        int idx = -1;  
+        for (int i = 0; i < m && ok; i++) {  
+            List<Integer> list = map.getOrDefault(word.charAt(i), new ArrayList<>());  
+            int l = 0, r = list.size() - 1;  
+            // 一直遍历得到满足大于前面idx位的最小值  
+            while (l < r) {  
+                int mid = l + (r - l) / 2;  
+                if (list.get(mid) > idx) r = mid;  
+                else l = mid + 1;  
+            }  
+  
+            // 如果r的值不存在，或者得到的r小于等于idx 那么直接不匹配 进行返回即可  
+            if (r < 0 || list.get(r) <= idx) ok = false;  
+            // 否则选择当前的值 作为idx的下标  
+            else idx = list.get(r);  
+        }  
+        if (ok) ans++;  
+    }  
+  
+    return ans;  
+}
+```
+
+
+
 
 
