--- a/模板/03 数组/2 子数组、子串、子序列/子数组.md
+++ b/模板/03 数组/2 子数组、子串、子序列/子数组.md
@@ -5,7 +5,7 @@
 - 总结一：给定一个数组区间，得到满足条件的子数组个数。
 	给定数组区间[left,right]  如果left 和right里面的所有数据都满足要求，那么满足条件的子数组个数为：right-left  即数组下标进行相减
 
-
+- 总结二：
 
 # 例题
 
@@ -49,4 +49,17 @@ public int numSubarrayBoundedMax(int[] nums, int left, int right) {
 }
 ```
 
+
+## leetcode_813
+
+题目：
+将 n 个元素划分为「最多」m个连续段，最大化连续段的平均值之和
+
+序列dp  将动态规划的思想用在数组或者字符串上
+
+设计一个函数dfs(i,k) 表示从数组下标i开始，最多分成k组的最大平均值和，答案为dfs(0,k)
+函数dfs(i,k)的执行逻辑如下：
+	- 当i=n 时，表示已经遍历到数组末尾，此时返回0
+	- 当k=1 时，表示只剩下一组，此时返回从下标i开始到数组末尾的平均值
+	- 否则 我们在`[i...n-1]`的范围内枚举分组的结束位置就，计算从下标i到下标j的平均值，以及从下标j+1开始，最多分成k-1组的最大平均值和，取最大的值作为答案
 
