--- a/00 重要算法/00 基础数据结构/2 链表.md
+++ b/00 重要算法/00 基础数据结构/2 链表.md
@@ -147,3 +147,56 @@ class Solution {
   
 }
 ```
+
+
+# 循环链表插入数据
+
+offer_29
+
+## 题目
+
+## 思路
+
+## 代码
+
+```
+public Node insert(Node head, int insertVal) {  
+    if (head == null) {  
+        Node cur = new Node(insertVal);  
+        cur.next = cur;  
+        return cur;  
+    }  
+  
+    Node roll = head.next;  
+    Node maxNode = head;  
+    while (roll != head) {  
+        if (roll.val > maxNode.val) {  
+            maxNode = roll;  
+        }  
+        roll = roll.next;  
+    }  
+	// maxNode的下一个值是minNode
+    Node minNode = maxNode.next;  
+    
+    Node insertNode = new Node(insertVal);  
+    // 如果当前值小于等于最小值  
+    // 或者当前值大于最大值  
+    if (insertVal <= minNode.val || insertVal >= maxNode.val) {  
+        insertNode.next = minNode;  
+        maxNode.next = insertNode;  
+        return head;  
+    }  
+  
+    while (minNode != maxNode) {  
+        Node next = minNode.next;  
+        if (insertVal >= minNode.val && insertVal < next.val) {  
+            minNode.next = insertNode;  
+            insertNode.next = next;  
+        }  
+        minNode = next;  
+    }  
+  
+    return head;  
+
+}
+```
