--- a/模板/04 字符、字符串操作/常见操作.md
+++ b/模板/04 字符、字符串操作/常见操作.md
@@ -12,6 +12,13 @@ Character.isLetterOrDigit(char c)
 
 ```
 
+## 判断一个字符是否是数字
+
+```
+Character.isDigit(c)
+```
+
+
 ## 字母转大小写
 
 	toLowerCase()方法将Character转换为小写。如果字符串中没有应该被转换的字符，则将原字符返回，否则返回一个新的字符。
@@ -32,6 +39,12 @@ Character.toUpperCase(c) //B
 
 ##  转数字
 
+```
+char c='1';
+int cur=c-'0';
+```
+
+## 字符串切分
 
 ```
 #字符串切分
