--- a/模板/04 字符、字符串操作/常见操作.md
+++ b/模板/04 字符、字符串操作/常见操作.md
@@ -33,7 +33,21 @@ Character.toUpperCase(c) //B
 
 ```
 
+## 字符串转字符数组
 
+### 字符数组排序
+
+```
+char[] tmpRes = str.toCharArray();
+Arrays.sort(tmpRes);
+```
+
+### 字符数组转字符串
+
+```
+char[] tmpRes;
+String key = String.valueOf(tmpRes);
+```
 
 # 字符串操作
 
@@ -51,6 +65,7 @@ int cur=c-'0';
 String s="asdchhfahiefh"
 s.subString(1,5) // [1,5) 左闭右开
 ```
+
 
 
 
