--- a/模板/04 字符、字符串操作/常见操作.md
+++ b/模板/04 字符、字符串操作/常见操作.md
@@ -1,4 +1,4 @@
-# 字符操作
+# 1、字符操作
 
 
 ## 判断一个字符是否是数字或者字母
@@ -7,8 +7,11 @@
 	其他的，空格 返回false
 
 ```
-
+// 判断一个字符是否是数字或者字母（包括大小写）
 Character.isLetterOrDigit(char c)
+
+//判断一个字符是否是字母（包括大小写）
+Character.isLetter('c')
 
 ```
 
@@ -49,7 +52,7 @@ char[] tmpRes;
 String key = String.valueOf(tmpRes);
 ```
 
-# 字符串操作
+# 2、字符串操作
 
 ##  转数字
 
@@ -64,6 +67,25 @@ int cur=c-'0';
 #字符串切分
 String s="asdchhfahiefh"
 s.subString(1,5) // [1,5) 左闭右开
+```
+
+## 删除字符串前后的空格
+
+无论字符串前后多少个空格都能被删除
+
+```
+String s=" ab ";
+s.trim()
+
+```
+
+## 字符串根据空格分割
+
+正则表达式 ，无论多少个空格都能分割
+
+```
+String s="ab   c d   e"
+String[] ss=s.split("\\s+");//[ab,c,d,e]
 ```
 
 
