--- a/模板/03 数组/2 子数组、子串、子序列/子数组.md
+++ b/模板/03 数组/2 子数组、子串、子序列/子数组.md
@@ -5,7 +5,7 @@
 - 总结一：给定一个数组区间，得到满足条件的子数组个数。
 	给定数组区间[left,right]  如果left 和right里面的所有数据都满足要求，那么满足条件的子数组个数为：right-left  即数组下标进行相减
 
-- 总结二：
+- 总结二：给定相同的
 
 # 例题
 
