--- a/模板/08 树/00 遍历模板/00 层次 后序 前序.md
+++ b/模板/08 树/00 遍历模板/00 层次 后序 前序.md
@@ -35,4 +35,21 @@ return ans;
 ```
 
 
-`
+# 递归 - 前序 后序 中序
+
+
+**所谓前序位置，就是刚进入一个节点（元素）的时候，后序位置就是即将离开一个节点（元素）的时候**
+
+**前中后序是遍历二叉树过程中处理每一个节点的三个特殊时间点**，绝不仅仅是三个顺序不同的 List：
+
+- 前序位置的代码在刚刚进入一个二叉树节点的时候执行；
+
+- 后序位置的代码在将要离开一个二叉树节点的时候执行；
+
+- 中序位置的代码在一个二叉树节点左子树都遍历完，即将开始遍历右子树的时候执行。
+
+
+
+
+
+
