--- a/模板/04 字符、字符串操作/常见操作.md
+++ b/模板/04 字符、字符串操作/常见操作.md
@@ -21,6 +21,20 @@ Character.isLetter('c')
 Character.isDigit(c)
 ```
 
+## 判断一个字符串是否是数字
+
+```
+public static boolean isNumericZidai(String str) {  
+    for (int i = 0; i < str.length(); i++) { 
+	    // 如果其中一个字符不是数字，直接返回错误 
+        if (!Character.isDigit(str.charAt(i))) {  
+            return false;  
+        }  
+    }  
+    return true;  
+}
+```
+
 
 ## 字母转大小写
 
