--- a/模板/04 字符、字符串操作/常见操作.md
+++ b/模板/04 字符、字符串操作/常见操作.md
@@ -1,27 +1,30 @@
 # 1、字符操作
 
 
-## 判断一个字符是否是数字或者字母
+## 判断一个字符是数字  字母
 
 	此时的字母包括大小写，都能满足条件，A-Z a-z 0-9 返回true
 	其他的，空格 返回false
 
 ```
-// 判断一个字符是否是数字或者字母（包括大小写）
-Character.isLetterOrDigit(char c)
+// 是否是数字 
+Character.isDigit(c)
 
-//判断一个字符是否是字母（包括大小写）
+//是否是字母（包括大小写）
 Character.isLetter('c')
 
+// 字母：是否是大写
+Character.isUpperCase(c); 
+// 字母：是否是小写
+Character.isLowerCase(c); 
+
+// 是否是数字或者字母（包括大小写）
+Character.isLetterOrDigit(char c)
+
 ```
 
-## 判断一个字符是否是数字
 
-```
-Character.isDigit(c)
-```
-
-## 判断一个字符串是否是数字
+## 判断一个字符串是否是数字 （循环）
 
 ```
 public static boolean isNumericZidai(String str) {  
