--- a/模板/00 二分法/二分法.md
+++ b/模板/00 二分法/二分法.md
@@ -2,6 +2,110 @@
 
 二分的本质是「二段性」而非「单调性」
 
+
+## 基础模板
+
+### 寻找一个数
+
+```
+public int searchInsert(int[] nums, int target) {  
+    int left = 0, right = nums.length - 1;  
+  
+    while (left <= right) { // left==right+1 的是区间停止  
+        int mid = left + (right - left) / 2;  
+        if (nums[mid] == target) {  
+            return mid;  
+        }  
+        if (nums[mid] > target) { // 因为mid已经对比过  
+            right = mid - 1;  
+        }  
+        if (nums[mid] < target) {  
+            left = mid + 1;  
+        }  
+    }  
+    return -1;  
+}
+```
+ 
+**1、为什么 while 循环的条件中是 <=，而不是 <**？
+
+答：因为初始化 `right` 的赋值是 `nums.length - 1`，即最后一个元素的索引，而不是 `nums.length`。
+
+这二者可能出现在不同功能的二分查找中，区别是：前者相当于两端都闭区间 `[left, right]`，后者相当于左闭右开区间 `[left, right)`，因为索引大小为 `nums.length` 是越界的。
+
+我们这个算法中使用的是前者 `[left, right]` 两端都闭的区间。**这个区间其实就是每次进行搜索的区间**。
+
+**2、终止条件是什么？**
+
+while(left<=right) 的终止条件是**left=right+1** ，写成区间的形式就是 `[right + 1, right]`，或者带个具体的数字进去 `[3, 2]`，可见**这时候区间为空**，因为没有数字既大于等于 3 又小于等于 2 的吧。所以这时候 while 循环终止是正确的，直接返回 -1 即可。
+
+`while(left < right)` 的终止条件是 `left == right`，写成区间的形式就是 `[right, right]`，或者带个具体的数字进去 `[2, 2]`，**这时候区间非空**，还有一个数 2，但此时 while 循环终止了。也就是说这区间 `[2, 2]` 被漏掉了，索引 2 没有被搜索，如果这时候直接返回 -1 就是错误的。
+
+当然，如果你非要用 `while(left < right)` 也可以，我们已经知道了出错的原因，就打个补丁好了：
+```
+... while(left < right) { 
+ ... } 
+return nums[left] == target ? left : -1;
+```
+ 
+ **3、为什么 `left = mid + 1`，`right = mid - 1`？我看有的代码是 `right = mid` 或者 `left = mid`，没有这些加加减减，到底怎么回事，怎么判断**？
+
+答：这也是二分查找的一个难点，不过只要你能理解前面的内容，就能够很容易判断。
+
+刚才明确了「搜索区间」这个概念，而且本算法的搜索区间是两端都闭的，即 `[left, right]`。那么当我们发现索引 `mid` 不是要找的 `target` 时，下一步应该去搜索哪里呢？
+
+当然是去搜索区间 `[left, mid-1]` 或者区间 `[mid+1, right]` 对不对？**因为 `mid` 已经搜索过，应该从搜索区间中去除**。
+
+**3、此算法有什么缺陷**？
+
+答：至此，你应该已经掌握了该算法的所有细节，以及这样处理的原因。但是，这个算法存在局限性。
+
+比如说给你有序数组 `nums = [1,2,2,2,3]`，`target` 为 2，此算法返回的索引是 2，没错。但是如果我想得到 `target` 的左侧边界，即索引 1，或者我想得到 `target` 的右侧边界，即索引 3，这样的话此算法是无法处理的。
+
+这样的需求很常见，**你也许会说，找到一个 `target`，然后向左或向右线性搜索不行吗？可以，但是不好，因为这样难以保证二分查找对数级的复杂度了**。
+
+我们后续的算法就来讨论这两种二分查找的算法
+
+
+
+
+## 例题
+
+### [剑指 Offer II 068. 查找插入位置](https://leetcode.cn/problems/N6YdxV/)
+
+#### 思路：
+
+***为什么找到的最终位置返回left？**
+
+* while的每一次执行都将使得right或left的位置相比当前center位置左移/右移一位，不难分析出无法进入while时的right和left的关系一定是right = left - 1。反推上一次能够进入while的情形：  
+*  
+* 如果上一次进入while后是target < nums[mid]，right被更新，right = center - 1，已知当前right = left - 1，说明当前left = center，由于target < nums[mid]，插入位置是center（即left），也就是center（left）这个坐标的元素及其右边元素(直到i的左一位)，都要向右移动一位。  
+*  
+* 如果上一次进入while后是target > nums[mid]，left被更新，left = center + 1，已知当前right = left - 1，说明当前right = center，由于target ≥ nums[mid]，插入位置是center+1（即left），也就是center+1（left）这个坐标的元素及其右边元素(直到i的左一位)，都要向右移动一位。  
+*  
+* 以上结果均使得插入位置为当前的left (或当前的right + 1)。
+
+```
+public int searchInsert(int[] nums, int target) {  
+    int left = 0, right = nums.length - 1;  
+  
+    while (left <= right) { // left==right+1 的是区间停止  
+        int mid = left + (right - left) / 2;  
+        if (nums[mid] == target) {  
+            return mid;  
+        }  
+        if (nums[mid] > target) { // 因为mid已经对比过  
+            right = mid - 1;  
+        }  
+        if (nums[mid] < target) {  
+            left = mid + 1;  
+        }  
+    }  
+    return left;  
+}
+```
+
+
 ### leetcode_162
 
 #### 题目
