--- a/模板/00 二分法/二分法.md
+++ b/模板/00 二分法/二分法.md
@@ -116,19 +116,14 @@ public int searchInsert(int[] nums, int target) {
 
 在确保有解的情况下，我们可以根据当前的分割点mid 与左右元素的大小关系来设定l或者r的移动。
 
-假设当前分割点mid满足关系 `nums[mid]>nums[mid+1]` ，一个简单的想法是`nums[mid]` 可能为峰值，而`nums[mid+1]` 必然不为峰值，于是让`r=mid` 从左半部分继续找峰值
+利用题目发现如下性质：**由于 `arr` 数值各不相同，因此峰顶元素左侧必然满足严格单调递增，峰顶元素右侧必然不满足。**
 
-**正确分析**
+因此 以峰顶元素为分割点的 arr 数组，根据与 前一元素/后一元素 的大小关系，具有二段性：
 
-上诉的做法前提有两个：
-- 对于任何数组来说，一定存在解
-- 二分不会错过峰值
+峰顶元素左侧满足 arr[i-1] < arr[i] 性质，右侧不满足
+峰顶元素右侧满足 arr[i] > arr[i+1]性质，左侧不满足
 
-**证明一，无论何种情况，数组必然存在峰值**
 
-**证明二，对于一个满足nums[x] > nums[x-1]的位置，x的右边一定存在峰值；或对于一个满足nums[x] > nums[x+1]的位置，x的左边一定存在峰值**
-
-至此，我们证明了始终选择大于边界一端机械能二分，可以确保选择的区间一定存在峰值，并受益者二分过程不断逼近峰值位置。
 
 #### 代码
 ```
@@ -143,8 +138,28 @@ while (l < r) {
 return r;
 ```
 
+使用mid判断
 
+```
+public int peakIndexInMountainArray(int[] arr) {  
+    int left = 0, right = arr.length - 1;  
+    int mid = 0;  
+    while (left <= right) { //break 的前提 由于这个值一定存在峰值，这个可以忽略  
+        mid = left + (right - left) / 2;  
+        if (arr[mid - 1] < arr[mid] && arr[mid + 1] < arr[mid]) {  
+            // 说明这个点是峰值  
+            break;  
+        }  
 
+		// 右边才是递增 右边比mid高
+        if (arr[mid + 1] > arr[mid]) left = mid;  
+		// 左边比mid高，左边才有可能存在山峰
+		// 左边 arr[mid-1]>arr[mid] 已经不满足递增条件，只能从左边找
+        if (arr[mid + 1] < arr[mid]) right = mid;  
+    }  
+    return mid;  
+}
+```
 
 
 
