--- a/模板/08 树/02 后序遍历相关题目/814 二叉树剪枝.md
+++ b/模板/08 树/02 后序遍历相关题目/814 二叉树剪枝.md
@@ -14,7 +14,7 @@
 
 叶子节点逐渐被剪掉，那么剩下的只有满足条件的叶子节点
 
-```
+```java
 class Solution {
     // 定义：输入一棵二叉树，返回的二叉树叶子节点都是 1
     public TreeNode pruneTree(TreeNode root) {
