--- a/模板/00 二分法/二分法.md
+++ b/模板/00 二分法/二分法.md
@@ -66,6 +66,73 @@ return nums[left] == target ? left : -1;
 
 我们后续的算法就来讨论这两种二分查找的算法
 
+### 寻找数的边界
+
+#### 寻找数的左边界
+
+如果一个数在某个搜索区间中一定存在左边界
+
+```
+int left_bound(int[] nums, int target) { 
+// 搜索区间为 [left, right] 
+int left = 0, right = nums.length - 1; 
+while (left <= right) { 
+	int mid = left + (right - left) / 2; 
+	// if else ... 
+	if (nums[mid] < target) { 
+	   // 搜索区间变为 [mid+1, right] 
+	    left = mid + 1; 
+	} else if (nums[mid] > target) { 
+	 // 搜索区间变为 [left, mid-1] 
+	    right = mid - 1; 
+	} else if (nums[mid] == target) { 
+	// 收缩右侧边界 
+	   right = mid - 1;
+	 }
+
+ // 此时 target 比所有数都大，返回 -1 
+     if (left == nums.length)  return -1;
+      // 判断一下 nums[left] 是不是 target
+     return nums[left] == target ? left : -1;
+}
+```
+
+如果一个数在某个搜索区间中一定存在右边界
+```
+public int right_bound(int[] nums, int target) {  
+    int left = 0, right = nums.length - 1;  
+    while (left <= right) {  
+        int mid = left + (right - left) / 2;  
+        if (nums[mid] < target) {  
+            left = mid + 1;  
+        } else if (nums[mid] > target) {  
+            right = mid - 1;  
+        } else if (nums[mid] == target) {  
+            // 这里改成收缩左侧边界即可  
+            left = mid + 1;  
+        }  
+    }  
+    // 最后改成返回 left - 1 由于终止条件是[right,right+1] right=left-1 此时  
+    if (right < 0) return -1;  
+    return nums[right] == target ? right : -1;  
+}
+```
+
+
+针对区间内一定会存在一个数是大于给定x数字的，最后需要返回left所指定的位置
+
+```
+public int binarySearch(int x) {  
+    int left = 0, right = pre.length - 1;  
+    while (left <= right) {  
+        int mid = left + (right - left) / 2;  
+        if (pre[mid] < x) left = mid + 1; // 直接跳过mid  
+        else right = mid - 1; // 针对满足条件的，别返回 继续缩小搜索空间去找边界
+    }  
+    // 找到首个大于x的位置  
+    return left;  
+}
+```
 
 
 
