--- a/模板/00 二分法/1 二分法总结.md
+++ b/模板/00 二分法/1 二分法总结.md
@@ -1,11 +1,15 @@
+总结阅读：
+https://leetcode.cn/circle/discuss/ooxfo8/#%E6%83%85%E5%BD%A21-%E5%A4%A7%E4%BA%8E%E7%AD%89%E4%BA%8E
+
 ## 本质
 
 二分的本质是「二段性」而非「单调性」
 
 
+
 ## 基础模板
 
-### 寻找一个数
+### 1）寻找一个数
 
 ```
 public int searchInsert(int[] nums, int target) {  
@@ -66,7 +70,7 @@ return nums[left] == target ? left : -1;
 
 我们后续的算法就来讨论这两种二分查找的算法
 
-### 寻找数的边界
+### 2) 寻找数的边界
 
 #### 寻找数的左边界
 
@@ -97,6 +101,8 @@ while (left <= right) {
 }
 ```
 
+#### 寻找数的右边界
+
 如果一个数在某个搜索区间中一定存在右边界
 ```
 public int right_bound(int[] nums, int target) {  
@@ -119,8 +125,11 @@ public int right_bound(int[] nums, int target) {
 ```
 
 
+#### 左边界大于等于某个数
+
 针对区间内一定会存在一个数是大于给定x数字的，最后需要返回left所指定的位置
 
+**一定是大于 不能等于 所以等于的时候需要跳过mid**
 ```
 public int binarySearch(int x) {  
     int left = 0, right = pre.length - 1;  
@@ -134,6 +143,28 @@ public int binarySearch(int x) {
 }
 ```
 
+#### 小于等于某个数的右边界
+
+```
+public int mySqrt(int x) {  
+    if (x == 1) return 1;  
+    // 二分查找，根据x 得到  
+    // 为什么right 取中值，因为开方之后不可能大于中间的值    int left = 1, right = x / 2;  
+    while (left <= right) {  
+        int mid = left + (right - left) / 2;  
+        if (mid > x / mid) {  
+            right = mid - 1;  
+        } else if (mid < x / mid) {  
+            left = mid + 1;  
+        } else {  
+            return mid;  
+        }  
+    }  
+    // 锁定右边的区间  
+    return right;  
+}
+
+```
 
 
 ## 例题
