--- a/模板/00 二分法/1 二分法总结.md
+++ b/模板/00 二分法/1 二分法总结.md
@@ -70,104 +70,194 @@ return nums[left] == target ? left : -1;
 
 我们后续的算法就来讨论这两种二分查找的算法
 
-### 2) 寻找数的边界
+### 2） 一般性
 
-#### 寻找数的左边界
-
-如果一个数在某个搜索区间中一定存在左边界
+这里将与target相等的元素下标称为【等于下标】，大于target元素中的最小下标称为【刚好大于下标】。小于target元素的最大下标称为【刚好小于下标】。
 
 ```
-int left_bound(int[] nums, int target) { 
-// 搜索区间为 [left, right] 
-int left = 0, right = nums.length - 1; 
-while (left <= right) { 
-	int mid = left + (right - left) / 2; 
-	// if else ... 
-	if (nums[mid] < target) { 
-	   // 搜索区间变为 [mid+1, right] 
-	    left = mid + 1; 
-	} else if (nums[mid] > target) { 
-	 // 搜索区间变为 [left, mid-1] 
-	    right = mid - 1; 
-	} else if (nums[mid] == target) { 
-	// 收缩右侧边界 
-	   right = mid - 1;
-	 }
-
- // 此时 target 比所有数都大，返回 -1 
-     if (left == nums.length)  return -1;
-      // 判断一下 nums[left] 是不是 target
-     return nums[left] == target ? left : -1;
-}
+   if(nums[c] < target) l = c + 1; // #1 更新后l左侧元素「必」小于target
+            else r = c - 1; // #2 更新后r右侧「必」大于等于target
 ```
 
-#### 寻找数的右边界
+**核心利用循环不变量**
 
-如果一个数在某个搜索区间中一定存在右边界
-```
-public int right_bound(int[] nums, int target) {  
-    int left = 0, right = nums.length - 1;  
-    while (left <= right) {  
-        int mid = left + (right - left) / 2;  
-        if (nums[mid] < target) {  
-            left = mid + 1;  
-        } else if (nums[mid] > target) {  
-            right = mid - 1;  
-        } else if (nums[mid] == target) {  
-            // 这里改成收缩左侧边界即可  
-            left = mid + 1;  
-        }  
-    }  
-    // 最后改成返回 left - 1 由于终止条件是[right,right+1] right=left-1 此时  
-    if (right < 0) return -1;  
-    return nums[right] == target ? right : -1;  
+1）如果进入#1 分支，那么更新之后left左侧元素【必】小于target
+2）如果进入#2分支，那么更新后r右侧必大于等于target
+
+本题终止的条件是r=l-1，根据【循环不变】关系，此时target必不在l左侧，而r的右侧必然大于等于target，又因为nums是单调的，因此 断言：l要么等于下标，要么是刚好大与下标。
+
+
+#### 2.1）大于等于
+
+```java
+// 模版一「一般」情形1: 大于等于
+class Solution {
+    public int search(int[] nums, int target) {
+        int l = 0, r = nums.length - 1;
+        while(l <= r){
+            int c = l + (r - l) / 2;
+            if(nums[c] < target) l = c + 1; // #1 更新后l左侧元素「必」小于target
+            else r = c - 1; // #2 更新后r右侧「必」大于等于target
+        }
+    
+        // return (l == nums.length || nums[l] != target) ? -1 : l; // 704题的返回，处理:相等/不等
+        return l == nums.length ? -1 : l; // 处理: 相等/刚好大于/不存在
+    }
 }
 ```
 
 
-#### 左边界大于等于某个数
 
-针对区间内一定会存在一个数是大于给定x数字的，最后需要返回left所指定的位置
+![[Pasted image 20230219202422.png]]
 
-**一定是大于 不能等于 所以等于的时候需要跳过mid**
-```
-public int binarySearch(int x) {  
-    int left = 0, right = pre.length - 1;  
-    while (left <= right) {  
-        int mid = left + (right - left) / 2;  
-        if (pre[mid] < x) left = mid + 1; // 直接跳过mid  
-        else right = mid - 1; // 针对满足条件的，别返回 继续缩小搜索空间去找边界
-    }  
-    // 找到首个大于x的位置  
-    return left;  
+该断言的前提是：l!=nums.length:
+- nums中元素的都小于target时，r更新，最终l=nums.length，因此当这个关系成立时候，返回-1
+- nums中存在元素大于等于target时，需要返回l
+- nums中所有元素都大于target时，l不更新，l=0
+
+#### 2.2）大于
+
+```java
+// 模版一「一般」情形2: 大于
+class Solution {
+    public int search(int[] nums, int target) {
+        int l = 0, r = nums.length - 1;
+        while(l <= r){
+            int c = l + (r - l) / 2;
+            if(nums[c] <= target) l = c + 1; // #1 更新后l左侧元素「必」小于等于target
+            else r = c - 1; // #2 更新后r右侧「必」大于target
+        }
+        return l == nums.length ? -1 : l; // 处理: 刚好大于/不存在
+    }
 }
 ```
 
-#### 小于等于某个数的右边界
+#### 2.3) 小于等于
 
-```
-public int mySqrt(int x) {  
-    if (x == 1) return 1;  
-    // 二分查找，根据x 得到  
-    // 为什么right 取中值，因为开方之后不可能大于中间的值    int left = 1, right = x / 2;  
-    while (left <= right) {  
-        int mid = left + (right - left) / 2;  
-        if (mid > x / mid) {  
-            right = mid - 1;  
-        } else if (mid < x / mid) {  
-            left = mid + 1;  
-        } else {  
-            return mid;  
-        }  
-    }  
-    // 锁定右边的区间  
-    return right;  
+```java
+// 模版一「一般」情形3: 小于等于
+class Solution {
+    public int search(int[] nums, int target) {
+        int l = 0, r = nums.length - 1;
+        while(l <= r){
+            int c = l + (r - l) / 2;
+            if(nums[c] <= target) l = c + 1; // #1 更新后l左侧「必」小于等于target
+            else r = c - 1; // #2 更新后r右侧「必」大于target
+        }
+
+        // return (r == -1 || nums[r] != target) ? -1 : r; // 704题的返回，处理:相等/不等
+        return r; // 处理: 相等/刚好小于/不存在
+    }
 }
-
 ```
+
+
+#### 2.4) 小于
+
+```java
+// 模版一「一般」情形4: 小于
+class Solution {
+    public int search(int[] nums, int target) {
+        int l = 0, r = nums.length - 1;
+        while(l <= r){
+            int c = l + (r - l) / 2;
+            if(nums[c] < target) l = c + 1; // #1 更新后l左侧元素「必」小于target
+            else r = c - 1; // #2 更新后r右侧「必」大于等于target
+        }
+        return r; // 处理: 相等/刚好小于/不存在
+    }
+}
+```
+
+#### 2.5）总结
+
+核心
+
+
+
+
+
+
+
+
 
 
 ## 例题
+
+#### [34. 在排序数组中查找元素的第一个和最后一个位置](https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/)
+
+### 题目
+给你一个按照非递减顺序排列的整数数组 nums，和一个目标值 target。请你找出给定目标值在数组中的开始位置和结束位置。
+
+如果数组中不存在目标值 target，返回 [-1, -1]。
+
+你必须设计并实现时间复杂度为 O(log n) 的算法解决此问题。
+
+### 题解
+
+```java
+public int[] searchRange(int[] nums, int target) {
+
+int[] ans = new int[2];
+
+ans[0] = left_bound(nums, target);
+
+ans[1] = right_bound(nums, target);
+
+return ans;
+
+}
+
+  
+  
+
+// 左边界 r是小于等于 就是说r是小于等于的最大值
+
+public int right_bound(int[] nums, int target) {
+
+int l = 0, r = nums.length - 1;
+
+while(l <= r){
+
+int c = l + (r - l) / 2;
+
+if(nums[c] <= target) l = c + 1; // #1 更新后l左侧「必」小于等于target
+
+else r = c - 1; // #2 更新后r右侧「必」大于target
+
+}
+
+return (r == -1 || nums[r] != target) ? -1 : r; // 704题的返回，处理:相等/不等
+
+//return r; // 处理: 相等/刚好小于/不存在
+
+}
+
+  
+
+// 右边界 l是大于等于的最小值
+
+public int left_bound(int[] nums, int target) {
+
+int l = 0, r = nums.length - 1;
+
+while(l <= r){
+
+int c = l + (r - l) / 2;
+
+if(nums[c] < target) l = c + 1; // #1 更新后l左侧元素「必」小于target
+
+else r = c - 1; // #2 更新后r右侧「必」大于等于target
+
+}
+
+return (l == nums.length || nums[l] != target) ? -1 : l; // 704题的返回，处理:相等/不等
+
+// return l == nums.length ? -1 : l; // 处理: 相等/刚好大于/不存在
+
+}
+```
+
 
 ### [剑指 Offer II 068. 查找插入位置](https://leetcode.cn/problems/N6YdxV/)
 
