--- a/00 重要算法/00 基础数据结构/1 排序.md
+++ b/00 重要算法/00 基础数据结构/1 排序.md
@@ -18,7 +18,7 @@ public static void sort(int[] nums, int left, int right) {
     }  
     // 基数从数组的最左边的一个元素  
     int base = nums[left];  
-    int i = left;  
+    int i = left;  // 需要保存最后的位置，递归的时候需要
     int j = right;  
     while (i < j) {  
         while (i < j && nums[j] >= base) {  
@@ -55,8 +55,14 @@ public static void sort(int[] nums, int left, int right) {
 可以发现如果我们选择的是序列中最左边的元素为基准值，先从左边开始移动 不能保证`arr[i]==arr[j]` 的时候 当前指向的值小于基数值。
 
 
+
+
 ## 归并排序
 
+
+```
+
+```
 
 
 # 非比较排序
